--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,13 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+.btn{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+.numberButton {
+    background-color: #184379;
+    color: #fff;
+   
+}
